# ortelius-ms-scorecard

./: .mega-linter.yml  Dockerfile  README.md  component.toml  cyclonedx.json  index.yaml  main.py  openapi.json  pyproject.toml  renovate.json  requirements.in  requirements.txt  trivy-results.sarif  views.sql
.github/workflows/: auto-approve.yml  build-push-chart.yml  helm-chart-releaser.yml  mega-linter.yml  scorecard.yml
chart/ms-dep-pkg-r/: Chart.yaml  values.yaml
chart/ms-scorecard/: Chart.yaml  values.yaml
chart/ms-scorecard/templates/: deployment.yaml
cloudbuild/: cloudbuild.yaml
reports/: defined_repo_users.py  devops_frydesign.css  frequency.html  lag.html  scorecard.html
