[tool.poetry]
name = "ms-scorecard"
version = "0.1.0"
description = ""
authors = ["Steve Taylor <steve@deployhub.com>"]
license = "Apache-2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.114.2"
numpy = "2.1.1"
pandas = "2.2.2"
psycopg2-binary = "2.9.9"
pydantic = "2.9.1"
sqlalchemy = "2.0.34"
uvicorn = "0.30.6"
certifi = "2024.8.30"
starlette = "0.38.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
