[tool.poetry]
name = "ms-scorecard"
version = "0.1.0"
description = ""
authors = ["Steve Taylor <steve@deployhub.com>"]
license = "Apache-2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.6"
numpy = "2.2.1"
pandas = "2.2.3"
psycopg2-binary = "2.9.10"
pydantic = "2.10.5"
sqlalchemy = "2.0.37"
uvicorn = "0.34.0"
certifi = "2024.12.14"
starlette = "0.45.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
